--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,262 @@
-body {
-    background-color: red;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#MainMenu{
+    background-color: #ff9900;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+
+
+
+#MainMenu a{
+ 
+    color:white;
+}
+
+
+#MainMenu a:hover {
+    background-color:  #ffcc00;
+  }
+
+
+#logo{
+    width:120px;
+}
+
+
+#panierlogo{
+    width:20px;
+}
+
+#MainMenu ul{
+    
+
+
+}
+
+#MainMenu li{
+    
+    display: inline-block;
+    font-size: 28px;
+    margin:10px;
+
+   
+
+}
+
+
+#index{
+    margin:5px;
+}
+
+footer{
+    background-color: #2e2e2e;
+    color:white;
+    text-align:center;
+    padding:5px;
+}
+
+
+#container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.destinations{
+    border:3px solid #ff9900;
+    display: flex;
+    flex-direction: column;
+   
+    align-items: center;
+    padding:0px;
+    margin:20px;
+    width:520px
+}
+
+
+
+.photodestination{
+    width:521px;
+    padding:0px;
+    margin:-1px;
+}
+
+.reservebutton{
+    background-color: #ff9900;
+    margin:10px;
+    padding:8px;
+
+}
+
+.reservebutton a{
+    text-decoration: none;
+    color:white;
+}
+
+.reservebutton a:hover {
+    background-color:  #ffcc00;
+  }
+
+
+
+#banner {
+    
+    background-image: url("../images/banner.jpg");
+    height:200px;
+    background-position: center;
+    text-align: center;
+    color:white;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #banner h1 {
+    position: relative;
+    top:40px;
+    font-family:"Merienda One" ;
+   
+
+
+}
+    
+footer a{
+    color:white;
+    
+}
+
+
+#form1 {
+    background-color: #d5d5d5;
+    padding:5px;
+    margin: 5px;
+    width:500px;
+    border:3px solid #ff9900;
+}
+
+#form2 {
+    background-color: #d5d5d5;
+    padding:5px;
+    margin: 5px;
+    width:500px;
+    border:3px solid #ff9900;
+}
+
+
+#form_submit {
+    background-color: #ff9900;
+    border: none;
+    padding:5px;
+}
+
+
+#form_submit:hover {
+    background-color:  #ffcc00;
+  }
+
+textarea{
+    height: 120px;
+  }
+
+#map{
+    width:500px ;
+    height:400px;
+    
+}
+
+
+#triange {
+    
+    background-color: #ff9900;
+    width:0px;
+    height:0px;
+
+    border-left:15px solid transparent;
+
+    border-right:15px solid transparent;
+
+    border-bottom:15px white solid;
+    
+    }
+
+
+#gotop {
+    position : fixed;
+    right : 10px;
+    bottom : 10px;
+
+    background-color: #ff9900;
+    width:50px;
+    height: 50px;
+    border:3px solid #ff9900;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+   
+        
+}
+
+
+
+table,
+td {
+    border: 1px solid #ff9900;
+    border-collapse: collapse;
+}
+
+thead,
+tfoot {
+    background-color: #ff9900;
+    color: #fff;
+}
+
+.paragraphe{
+    width:1280px;
+}
+
+.add-to-cart{
+    background-color: #ff9900;
+    color:white;
+    border: none;
+    margin:10px;
+    padding:8px;
+    
+}
+
+
+.add-to-cart:hover{
+    background-color:  #ffcc00;
+}
+
+
+
+.dropdown:hover > #cart-dropdown{
+    display:block;
+}
+
+
+
+.dropdown{
+    position : fixed;
+    right : 20px;
+    top : 30px;
+    
+
+}
+
+
+#PanierTB{
+    text-align: center; 
+    vertical-align: middle;
 }
