organise code in MVC

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,8 +109,7 @@ footer{
 
 
 #banner {
-    
-    background-image: url("../images/banner.jpg");
+    background-image: url("../banner.jpg");
     height:200px;
     background-position: center;
     text-align: center;
