--- a/templates/chine.html
+++ b/templates/chine.html
@@ -4,17 +4,15 @@
 {% block content %}
         <main>
             <div id="banner">
-                <h1>Chine</h1>
+                <h1>{{ infos_dest[1] }}</h1>
             </div>
             <div id="container">
                 <div class="destinations">
                
                     <img class="photodestination" src="{{ url_for('static', filename='the-great-wall.jpg') }}" alt="description" >
-                    <h3>Chine</h3>
+                    <h3>{{ infos_dest[1] }}</h3>
                     <div class="reservebutton"><a href="{{ url_for('destinations', pays_id='2') }}">En savoir plus</a></div>
                 </div>
-              
-            
            
                 <label for="q"> Quantité:</label>
                 <select id="qt" name="q">
@@ -51,20 +49,26 @@
                 <h2>Tarif:</h2>
 
                 <ul>
-                    <li>dès 1000€</li>
+                    <li>dès {{ infos_dest[2] }}</li>
                     <li>TTC/Personne</li>
-                    <li>en 5 jours / 4 nuits</li>
+                    <li>en {{ infos_dest[3] }}</li>
                 </ul>
 
 
              <h2>Résumé:</h2>
-             <p class="paragraphe">En Asie, venez découvrir la Chine ! Ce vaste pays vous charmera par sa culture, sa cuisine et ses paysages variés, entre grandes métropoles et petits villages de campagne. Les hôtels Kyriad vous accueillent à Pékin ou à Shanghai,
-                à l’est du pays. Restaurant aux saveurs locales, literie de qualité et kiosque à magazines : nos hôtels ont tout bon !</p>
+             <!-- <p class="paragraphe">
+                En Asie, venez découvrir la Chine ! Ce vaste pays vous charmera par sa culture, sa cuisine et ses paysages variés, entre grandes métropoles et petits villages de campagne. Les hôtels Kyriad vous accueillent à Pékin ou à Shanghai,
+                à l’est du pays. Restaurant aux saveurs locales, literie de qualité et kiosque à magazines : nos hôtels ont tout bon !
+            </p> -->
+            <p class="paragraphe">
+                {{ infos_dest[4] }}
+            </p>
 
                 <h3>Include dans ce voyage:</h3>
                     <ul>
-                        <li>Vol A/R au départ de Paris(+10 autres villes )</li>
-                        <li>Demi-pension</li>
+                        <!-- <li>Vol A/R au départ de Paris(+10 autres villes )</li>
+                        <li>Demi-pension</li> -->
+                        <li>{{ infos_dest[5] }}</li>
                         <li>Chambre</li>
                         <li>Transfert</li>
                     </ul>
@@ -85,8 +89,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Jour 1</td>
-                            <td>France - Pékin </td>
+                            <td>{{ infos_dest[6] }}</td>
+                            <!-- <td>Jour 1</td>
+                            <td>France - Pékin </td> -->
                         </tr>
     
                         <tr>
